Cart actions properly work with the localStorage API. Move decreasing product amount to a handler. Fix wide images not fitting properly (sass).

--- a/src/sass/components/_cart.scss
+++ b/src/sass/components/_cart.scss
@@ -66,6 +66,12 @@
           width: 20%;
           height: 100%;
           overflow: hidden;
+          &.horizontal {
+            img {
+              width: 100%;
+              height: auto;
+            }
+          }
           img {
             height: 100%;
           }
